widget/windows/KeyboardLayout.cpp
@@ -33,6 +33,7 @@
 #include "npapi.h"
 
 #include <windows.h>
+#include <winnls.h>
 #include <winuser.h>
 #include <algorithm>
 
@@ -1244,6 +1245,7 @@ NativeKey* NativeKey::sLatestInstance = nullptr;
 const MSG NativeKey::sEmptyMSG = {};
 MSG NativeKey::sLastKeyOrCharMSG = {};
 MSG NativeKey::sLastKeyMSG = {};
+char16_t NativeKey::sPendingHighSurrogate = 0;
 
 NativeKey::NativeKey(nsWindow* aWidget, const MSG& aMessage,
                      const ModifierKeyState& aModKeyState,
@@ -1413,11 +1415,14 @@ void NativeKey::InitIsSkippableForKeyOrChar(const MSG& aLastKeyMSG) {
 
 void NativeKey::InitWithKeyOrChar() {
   MSG lastKeyMSG = sLastKeyMSG;
+  char16_t pendingHighSurrogate = sPendingHighSurrogate;
   mScanCode = WinUtils::GetScanCode(mMsg.lParam);
   mIsExtended = WinUtils::IsExtendedScanCode(mMsg.lParam);
   switch (mMsg.message) {
     case WM_KEYDOWN:
     case WM_SYSKEYDOWN:
+      sPendingHighSurrogate = 0;
+      [[fallthrough]];
     case WM_KEYUP:
     case WM_SYSKEYUP: {
       // Modify sLastKeyMSG now since retrieving following char messages may
@@ -1527,6 +1532,7 @@ void NativeKey::InitWithKeyOrChar() {
     case WM_CHAR:
     case WM_UNICHAR:
     case WM_SYSCHAR:
+      sPendingHighSurrogate = 0;
       // If there is another instance and it is trying to remove a char message
       // from the queue, this message should be handled in the old instance.
       if (IsAnotherInstanceRemovingCharMessage()) {
@@ -1601,6 +1607,55 @@ void NativeKey::InitWithKeyOrChar() {
                this, ToString(charMsg).get()));
       Unused << NS_WARN_IF(charMsg.hwnd != mMsg.hwnd);
       mFollowingCharMsgs.AppendElement(charMsg);
+    }
+    if (mFollowingCharMsgs.Length() == 1) {
+      // If we receive a keydown message for a high-surrogate, a low-surrogate
+      // keydown message **will** and should follow it.  We cannot translate the
+      // following WM_KEYDOWN message for the low-surrogate right now since
+      // it's not yet queued into the message queue yet.  Therefore, we need to
+      // wait next one to dispatch keypress event with setting its `.key` value
+      // to a surrogate pair rather than setting it to a lone surrogate.
+      // FYI: This may happen with typing a non-BMP character on the touch
+      // keyboard on Windows 10 or later except when an IME is installed. (If
+      // IME is installed, composition is used instead.)
+      if (IS_HIGH_SURROGATE(mFollowingCharMsgs[0].wParam)) {
+        if (pendingHighSurrogate) {
+          MOZ_LOG(gKeyLog, LogLevel::Warning,
+                  ("%p   NativeKey::InitWithKeyOrChar(), there is pending "
+                   "high surrogate input, but received another high surrogate "
+                   "input.  The previous one is discarded",
+                   this));
+        }
+        sPendingHighSurrogate = mFollowingCharMsgs[0].wParam;
+        mFollowingCharMsgs.Clear();
+      } else if (IS_LOW_SURROGATE(mFollowingCharMsgs[0].wParam)) {
+        // If we stopped dispathing a keypress event for a preceding
+        // high-surrogate, treat this keydown (for a low-surrogate) as
+        // introducing both the high surrogate and the low surrogate.
+        if (pendingHighSurrogate) {
+          MSG charMsg = mFollowingCharMsgs[0];
+          mFollowingCharMsgs[0].wParam = pendingHighSurrogate;
+          mFollowingCharMsgs.AppendElement(std::move(charMsg));
+        } else {
+          MOZ_LOG(
+              gKeyLog, LogLevel::Warning,
+              ("%p   NativeKey::InitWithKeyOrChar(), there is no pending high "
+               "surrogate input, but received lone low surrogate input",
+               this));
+        }
+      } else {
+        MOZ_LOG(gKeyLog, LogLevel::Warning,
+                ("%p   NativeKey::InitWithKeyOrChar(), there is pending "
+                 "high surrogate input, but received non-surrogate input.  "
+                 "The high surrogate input is discarded",
+                 this));
+      }
+    } else {
+      MOZ_LOG(gKeyLog, LogLevel::Warning,
+              ("%p   NativeKey::InitWithKeyOrChar(), there is pending "
+               "high surrogate input, but received 2 or more character input.  "
+               "The high surrogate input is discarded",
+               this));
     }
   }
 
@@ -2418,6 +2473,18 @@ bool NativeKey::HandleKeyDownMessage(bool* aEventDispatched) const {
     return false;
   }
 
+  if (sPendingHighSurrogate) {
+    MOZ_LOG(gKeyLog, LogLevel::Info,
+            ("%p   NativeKey::HandleKeyDownMessage(), doesn't dispatch keydown "
+             "event because the key introduced only a high surrotate, so we "
+             "should wait the following low surrogate input",
+             this));
+    if (RedirectedKeyDownMessageManager::IsRedirectedMessage(mMsg)) {
+      RedirectedKeyDownMessageManager::Forget();
+    }
+    return false;
+  }
+
   // If the widget has gone, we should do nothing.
   if (mWidget->Destroyed()) {
     MOZ_LOG(
@@ -2774,6 +2841,15 @@ bool NativeKey::HandleKeyUpMessage(bool* aEventDispatched) const {
     MOZ_LOG(gKeyLog, LogLevel::Info,
             ("%p   NativeKey::HandleKeyUpMessage(), doesn't dispatch keyup "
              "event because the key combination is reserved by the system",
+             this));
+    return false;
+  }
+
+  if (sPendingHighSurrogate) {
+    MOZ_LOG(gKeyLog, LogLevel::Info,
+            ("%p   NativeKey::HandleKeyUpMessage(), doesn't dispatch keyup "
+             "event because the key introduced only a high surrotate, so we "
+             "should wait the following low surrogate input",
              this));
     return false;
   }
